[package]
name = "clanker_lp_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = {version = "0.9.2", features = ["consensus", "contract", "eips", "network", "providers","provider-ws", "pubsub", "rpc", "rpc-types", "sol-types", "json-abi"]}
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "parking_lot",
], default-features = false }
tracing = { version = "0.1", features = [], default-features = false }
tracing-test = { version = "0.2", features = [
    "no-env-filter",
], default-features = false }
serde = "1.0.217"
serde_json = "1.0.135"
futures-util = { version = "0.3", features = [], default-features = false }
futures = { version = "0.3", default-features = false }
clap = { version = "4.4", features = ["derive"] }
